# all-hands-project-3-2025Spr-team-1

./: README.md  data_collection-avg_data.csv  data_collection-raw_data.csv
comparison/: benchmark_commands.sh  pyproject.toml
comparison/comparison/: __init__.py  generate.py  list_process.py  main.py  set.py
comparison/tests/: __init__.py  test_list_process.py  test_main.py
